# ChangeLog for sci-astronomy/celestia
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-astronomy/cvs-repo/gentoo-x86/sci-astronomy/celestia/ChangeLog,v 1.2 2004/12/24 19:51:24 swegener Exp $

*celestia-1.3.2 (23 Dec 2004)

  23 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +files/celestia-1.3.2-noarts.patch, +files/resmanager.h.patch,
  +celestia-1.3.2.ebuild:
  Moved from app-sci/celestia to sci-astronomy/celestia.

  29 Nov 2004; Daniel Goller <morfic@gentoo.org>
  -files/celestia-1.3.1-gtkmain.patch, -files/celestia-gcc3.patch,
  -celestia-1.3.0-r1.ebuild, -celestia-1.3.0.ebuild, -celestia-1.3.1.ebuild:
  Cleaning up all the old/broken ebuilds and their files.

  28 Nov 2004; Simon Stelling <blubb@gentoo.org> celestia-1.3.2.ebuild:
  stable on amd64

  16 Nov 2004; Patrick Kursawe <phosphan@gentoo.org> celestia-1.3.0-r1.ebuild,
  celestia-1.3.0.ebuild, celestia-1.3.1.ebuild:
  Fixing #71064 (removing einfo "-------")

  12 Nov 2004; Daniel Goller <morfic@gentoo.org> celestia-1.3.2.ebuild:
  added arts USE flag, stable on x86 and ppc

  30 Sep 2004; Daniel Goller <morfic@gentoo.org> -celestia-1.3.2_pre20040731-r1.ebuild,
  -celestia-1.3.2_pre20040731.ebuild, -digest-celestia-1.3.2_pre20040731, -digest-celestia-1.3.2_pre20040731-r1:
  cleaned up old 1.3.2_pre ebuilds

  01 Oct 2004; Danny van Dyk <kugelfang@gentoo.org> celestia-1.3.2.ebuild:
  Marked ~amd64.

  27 Sep 2004; Daniel Goller <morfic@gentoo.org> celestia-1.3.2.ebuild:
  added ~ppc keyword

  25 Sep 2004; Daniel Goller <morfic@gentoo.org> metadata.xml:
  added maintainers to metadata.xml

*celestia-1.3.2 (31 Aug 2004)

  31 Aug 2004; Daniel Goller <morfic@gentoo.org> +celestia-1.3.2.ebuild:
  new version, updated depends
  thanks Giacomo Perale, Bret Towe

  18 Aug 2004; Daniel Goller <morfic@gentoo.org> -celestia-1.2.2.ebuild,
  -celestia-1.2.4.ebuild, -celestia-1.2.5.ebuild,
  celestia-1.3.2_pre20040731-r1.ebuild: