@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 78b99dfa4ce3dcba6aa3f2ffb5c338da ChangeLog 5655
-MD5 0bef0a97c670c1822c789c91f480a2d3 celestia-1.3.2.ebuild 3093
-MD5 f659f2616eeaaa4d3b6422e586d2bfa2 files/celestia-1.3.2-noarts.patch 3566
+MD5 1b55bd73a1313e288a88762af6cd0fb7 metadata.xml 330
+MD5 36ad779eed4affe5b2b8f45181dc3696 celestia-1.3.2.ebuild 3054
+MD5 d3d0c93970f9d603b0cbad036aa83811 ChangeLog 5890
 MD5 d4ff8e51fb3a546279e7442cf24e07d7 files/digest-celestia-1.3.2 68
 MD5 f96a6eb019a59bf1a643b96c43657af8 files/resmanager.h.patch 893
-MD5 1b55bd73a1313e288a88762af6cd0fb7 metadata.xml 330
+MD5 f659f2616eeaaa4d3b6422e586d2bfa2 files/celestia-1.3.2-noarts.patch 3566
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFC1SYbI1lqEGTUzyQRAqmsAJ42p0cBwPMcyOf6nJLyVm76ESE2hQCcC+sT
-r4ybPkp+MLPnK2l7eaN4Bsk=
-=Ermd
+iD8DBQFC2gjKgIKl8Uu19MoRAihVAJ0cC+z/eg8Jo1I18h2PUq7JTJfZvACfetGF
+1+h+ZXsAla1IWX6PiFOg59g=
+=A9jb
 -----END PGP SIGNATURE-----
