@@ -1,6 +1,11 @@
 # ChangeLog for sci-astronomy/celestia
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-astronomy/cvs-repo/gentoo-x86/sci-astronomy/celestia/ChangeLog,v 1.2 2004/12/24 19:51:24 swegener Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-astronomy/cvs-repo/gentoo-x86/sci-astronomy/celestia/ChangeLog,v 1.3 2005/07/17 07:27:25 vapier Exp $
+
+  17 Jul 2005; Mike Frysinger <vapier@gentoo.org> celestia-1.3.2.ebuild:
+  Change glut to use virtual/glut #93449, clean up the ebuild a bit, and if
+  user hasnt selected gtk/kde/gnome, default to gtk since it is the lightest
+  depend.
 
 *celestia-1.3.2 (23 Dec 2004)
 
